err/dubbo-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dubbo_client'...
Compiling './lib/python3.5/site-packages/dubbo_client/config.py'...
***   File "./lib/python3.5/site-packages/dubbo_client/config.py", line 38
    print application_config
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dubbo_client/registry.py'...
***   File "./lib/python3.5/site-packages/dubbo_client/registry.py", line 224
    print event
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dubbo_client/rpclib.py'...
***   File "./lib/python3.5/site-packages/dubbo_client/rpclib.py", line 46
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dubbo_client-1.0.0b5.egg-info'...
Listing './lib/python3.5/site-packages/kazoo'...
Listing './lib/python3.5/site-packages/kazoo/handlers'...
Listing './lib/python3.5/site-packages/kazoo/protocol'...
Listing './lib/python3.5/site-packages/kazoo/recipe'...
Listing './lib/python3.5/site-packages/kazoo/testing'...
Listing './lib/python3.5/site-packages/kazoo/tests'...
Listing './lib/python3.5/site-packages/kazoo-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/munch'...
Listing './lib/python3.5/site-packages/munch-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyjsonrpc'...
Compiling './lib/python3.5/site-packages/pyjsonrpc/http.py'...
***   File "./lib/python3.5/site-packages/pyjsonrpc/http.py", line 558
    print "Content-Type: application/json"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/python_jsonrpc-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_rawclient.py'...
***   File "./lib/python3.5/site-packages/tests/test_rawclient.py", line 7
    print user_provider.getUser('A003')
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_registry.py'...
***   File "./lib/python3.5/site-packages/tests/test_registry.py", line 9
    print registry.get_provides('com.ofpay.demo.api.UserProvider')
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_rpclib.py'...
***   File "./lib/python3.5/site-packages/tests/test_rpclib.py", line 19
    print user_provider.getUser('A003')
                      ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
